[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shapley-values"
version = "0.1.0"
description = "Exact Shapley value computation for cooperative game theory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Raphael Bonnet Guerrini"},
]
keywords = ["shapley", "game-theory", "explainability", "feature-importance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
notebook = ["scikit-learn>=1.0", "pandas>=1.3", "jupyter", "shap>=0.42"]
dev = ["shapley-values[notebook]"]

[project.urls]
Homepage = "https://github.com/rbonneguerrini/shapley-values"
Repository = "https://github.com/rbonneguerrini/shapley-values"
Issues = "https://github.com/rbonneguerrini/shapley-values/issues"

[tool.setuptools.packages.find]
include = ["shapley_values*"]
